Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/importChecks/ImportsObservable.out
ImportsObservable.java:9:1: compiler.err.doesnt.exist: javax
1 error
